# treasure_chest

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: cargo.yml
backend/: Cargo.toml
backend/entity/: Cargo.toml  access_log.rs  file.rs  mod.rs
backend/migration/: Cargo.toml
backend/src/: cleanup.rs  database.rs  error.rs  file.rs  main.rs  request.rs  util.rs
backend/src/api/: mod.rs  server.rs
backend/src/encryption/: definitions.rs  mod.rs
backend/src/hash/: argon2.rs  definitions.rs  mod.rs
base/: Cargo.toml
base/src/: base64.rs  file.rs  lib.rs
base/src/encryption/: definitions.rs  mod.rs  xchacha20poly1305.rs
base/src/hash/: argon2.rs  definitions.rs
frontend/: README.md  angular.json  deno.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/conversion/: to-readable-bytes.pipe.ts
frontend/src/error/: error.component.html  (+2 more)
treasure_chest/: Cargo.toml  config.json.example
treasure_chest/development/: ALLOCATION.md
treasure_chest/entity/: file.rs  mod.rs  prelude.rs
treasure_chest/src/: cleanup.rs  configuration.rs  database.rs  error.rs  file.rs  main.rs  request.rs  util.rs
trsure_chest/: Cargo.toml  config.json.example
trsure_chest/base/: Cargo.toml
trsure_chest/base/src/: base64.rs  file.rs
trsure_chest/base/src/encryption/: definitions.rs  xchacha20poly1305.rs
trsure_chest/base/src/hash/: argon2.rs  definitions.rs  mod.rs
trsure_chest/entity/: Cargo.toml  mod.rs
trsure_chest/migration/: Cargo.toml
trsure_chest/src/: configuration.rs  database.rs  db.rs  error.rs  file.rs  main.rs  request.rs  util.rs
trsure_chest/src/api/: mod.rs  server.rs
trsure_chest/src/api/routes/: download.rs  upload.rs
trsure_chest/src/encryption/: xchacha20poly1305.rs
web/: Cargo.toml
web/src/: main.rs
web/src/api/: mod.rs  request.rs  server.rs
web/src/api/routes/: download.rs  upload.rs
web/src/db/: model.rs  pool.rs
(+32 files in other folders)
