[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7.13", features = ["io"] }
axum = { version = "0.7.9", features = ["multipart", "macros"] }
log = "0.4.22"
rusty_box = { path = "../base" }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "sqlite"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.6"
